Updated for spotx-nosdk-controller 1.1.4 and spotx-web-nosdk 2.0.4

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,23 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.1.4
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li><b>NOTE: Version 1.1.3 was skipped because of a yum conflict during testing.</b></li>
+                        <li>Reworked MOAT dictionary build process to match MOAT spec.</li>
+                        <li>Ingest <b>publisher_id</b> and <b>campaign_id</b> from settings endpoint.</li>
+                        <li>Added epoch to end of rpm name in build process.</li>
+                        <li>Prevent Docker from auto-cleaning orphaned images during build-rpm.sh.</li>
+                        <li>Make sure Docker checks out the latest <b>cent7</b> image before building.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.1.2
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
