--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -40,6 +40,21 @@
             <div class="box_full red redbackgroundlight bold">
                 <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
                 <div class="box_left_versionString">
+                    2.0.4
+                </div>
+                <div class="box_left_versionString package_description redborderlight">
+                    <ul>
+                        <li>Added <b>publisher_id</b> and <b>campaign_id</b> to the settings endpoint.</li>
+                        <li>Added epoch to end of rpm name in build process.</li>
+                        <li>Prevent Docker from auto-cleaning orphaned images during build-rpm.sh.</li>
+                        <li>Make sure Docker checks out the latest <b>cent7</b> image before building.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full red redbackgroundlight">
+                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_left_versionString">
                     2.0.3
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
