spotx-sdk-android release 3.4.4

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -52,6 +52,18 @@
             <div class="box_full peach peachbackgroundlight">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    3.4.4
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Fix error where <b>getContentLengthLong()</b> was unavailable in SDK <= 24.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     3.4.3
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
