spotx-nosdk-controller release 1.1.5

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,18 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.1.5
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Support for OM SDK.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.1.4
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
