spotx-mobile-android & spotx-mobile-ios release 3.0.0

--- a/website/index.html
+++ b/website/index.html
@@ -183,6 +183,7 @@
                     <a href="spotx-mobile-ios/index.html">spotx-mobile-ios</a>
                 </div>
                 <div class="box_left_versionString">
+                    2.1.1<br>
                     2.1.0<br>
                     2.0.0<br>
                     1.0.0
@@ -192,24 +193,25 @@
                 <div class="box_right_titlebar tealbackground">
                     <a href="spotx-mobile-ios/index.html">spotx-mobile-ios</a>
                 </div>
-                <div class="box_right_versionString">2.1.1</div>
+                <div class="box_right_versionString">3.0.0</div>
             </div>
         </div>
 
-        <div>
+        <div class="rowdiv">
             <div class="box_left blue bluebackgroundlight">
                 <div class="box_left_titlebar bluebackground">
                     <a href="spotx-mobile-android/index.html">spotx-mobile-android</a>
                 </div>
-                <div class="box_left_versionString bluebackgroundlight">1.0.0</div>
+                <div class="box_left_versionString">
+                    1.0.1<br>
+                    1.0.0
+                </div>
             </div>
             <div class="box_right blue bluebackgroundlight bold">
                 <div class="box_right_titlebar bluebackground">
                     <a href="spotx-mobile-android/index.html">spotx-mobile-android</a>
                 </div>
-                <div class="box_right_versionString bluebackgroundlight">
-                    1.0.1
-                </div>
+                <div class="box_right_versionString">3.0.0</div>
             </div>
         </div>
 
