--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -40,6 +40,22 @@
             <div class="box_full blue bluebackgroundlight bold">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString">
+                    3.0.0
+                </div>
+                <div class="box_left_versionString package_description blueborderlight">
+                    <ul>
+                        <li>Brand new interface.</li>
+                        <li>Dashboard - New line chart to show trending data over time.</li>
+                        <li>Channels - View summary, details, and make edits.</li>
+                        <li>Campaigns - View summary, details, and make edits.</li>
+                        <li>SDK4 - generate apikeys for SDK settings, and modify existing apikey settings.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full blue bluebackgroundlight">
+                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_versionString">
                     1.0.1
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
