--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -40,6 +40,22 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    3.0.0
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>Brand new interface.</li>
+                        <li>Dashboard - New line chart to show trending data over time.</li>
+                        <li>Channels - View summary, details, and make edits.</li>
+                        <li>Campaigns - View summary, details, and make edits.</li>
+                        <li>SDK4 - generate apikeys for SDK settings, and modify existing apikey settings.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     2.1.1
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
