spotx-nosdk-android 4.3.5

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,6 +40,21 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.3.5
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Pass <b>device[lmt]</b> as 0/1 instead of TRUE/FALSE.</li>
+                        <li>Pass <b>device[dnt]</b> as 0/1 instead of TRUE/FALSE.</li>
+                        <li>Remove geo permission as mandatory requirement in manifest.</li>
+                        <li>Properly populate <b>campaign_id</b> as <b>level4</b> slicer in MOAT dictionary.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.3.4
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
