spotx-nosdk-apple 4.3.1

--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -40,6 +40,20 @@
             <div class="box_full yellow yellowbackgroundlight bold">
                 <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_left_versionString">
+                    4.3.1
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>Pass <b>device[lmt]</b> as 0/1 instead of TRUE/FALSE.</li>
+                        <li>Pass <b>device[dnt]</b> as 0/1 instead of TRUE/FALSE.</li>
+                        <li>Properly populate <b>campaign_id</b> as <b>level4</b> slicer in MOAT dictionary.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
                     4.2.1
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
