spotx-mobile-ios 3.0.1 spotx-mobile-android 3.0.1

--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -40,6 +40,21 @@
             <div class="box_full blue bluebackgroundlight bold">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString">
+                    3.0.1
+                </div>
+                <div class="box_left_versionString package_description blueborderlight">
+                    <ul>
+                        <li>Password field focus on username saved.</li>
+                        <li>Add back "Yesterday" as Date Range.</li>
+                        <li>Remove Space from Value Format in Dashboard Graph for Revenue.</li>
+                        <li>Channel Price Floor Bug Fix.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full blue bluebackgroundlight">
+                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_versionString">
                     3.0.0
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
