--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -40,6 +40,25 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    3.0.1
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>Misc Bug Fixes :: Curreny & Login Error Message.</li>
+                        <li>Fix for Eureka 5.0.0 compatibility (internal).</li>
+                        <li>Password first responder & settings footer fix.</li>
+                        <li>Fix DashGraphModel BarChartDataSet.</li>
+                        <li>Add back "Yesterday" as Date Range.</li>
+                        <li>Fix Channel Name Encoding Issue.</li>
+                        <li>Add Currency Symbol to Dashboard Graph for Revenue.</li>
+                        <li>Update icons.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     3.0.0
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
