Add spotx-sdklite-android to the deck

--- a/website/index.html
+++ b/website/index.html
@@ -80,6 +80,23 @@
         <div class="rowdiv">
             <div class="box_left peach peachbackgroundlight">
                 <div class="box_left_titlebar peachbackground">
+                    <a href="spotx-sdklite-android/index.html">spotx-sdklite-android</a>
+                </div>
+                <div class="box_left_versionString">
+                    ALPHA
+                </div>
+            </div>
+            <div class="box_right peach peachbackgroundlight bold">
+                <div class="box_right_titlebar peachbackground">
+                    <a href="spotx-sdklite-android/index.html">spotx-sdklite-android</a>
+                </div>
+                <div class="box_right_versionString">BETA</div>
+            </div>
+        </div>
+
+        <div class="rowdiv">
+            <div class="box_left peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">
                     <a href="spotx-sdk-android/index.html">spotx-sdk-android</a>
                 </div>
                 <div class="box_left_versionString">
