spotx-nosdk-controller 1.2.1 spotx-web-nosdk 2.1.1

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,21 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.2.1
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Add <b>advertiser_banner</b> text area to bottom center of player (optional).</li>
+                        <li>Add <b>keyEvent</b> handler for Android remote controls (easy to populate with additional keyEvents if necessary in the future).</li>
+                        <li><i>INTERNAL:</i> Soft roll-out of VMAP controller code.</li>
+                        <li><i>INTERNAL:</i> Soft roll-out of OM SDK controller code.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.2.0
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
