--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -40,6 +40,18 @@
             <div class="box_full red redbackgroundlight bold">
                 <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
                 <div class="box_left_versionString">
+                    2.1.1
+                </div>
+                <div class="box_left_versionString package_description redborderlight">
+                    <ul>
+                        <li>Add <b>advertiser_banner</b> key to SDK4 settings endpoint.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full red redbackgroundlight">
+                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_left_versionString">
                     2.1.0
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
