--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,6 +40,18 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.3.6
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Update SDK build.gradle to support API28+ play services packages.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.3.5
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
