--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,36 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.3.1
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Fix reversed omidpv/pn.</li>
+                        <li>Trim whitespace from XML values.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
+                    1.3.0
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Add VastVerification support and handle OMID injection properly.</li>
+                        <li>Parse OMID scripts from VAST.</li>
+                        <li>Remove busted XML parser, use native parser instead.</li>
+                        <li>Remove temporary OMID params from the native side.</li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.2.1
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
