spotx-nosdk-controller 1.3.2

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,18 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.3.2
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Only send <b>omidpn</b> and <b>omidpv</b> for SDK versions 4.4.0 and greater.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.3.1
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
@@ -62,8 +74,6 @@
                         <li>Parse OMID scripts from VAST.</li>
                         <li>Remove busted XML parser, use native parser instead.</li>
                         <li>Remove temporary OMID params from the native side.</li>
-                        <li></li>
-                        <li></li>
                     </ul>
                 </div>
             </div>
