spotx-sdk-ios 4.4.0 spotx-sdk-android 4.4.0

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,6 +40,18 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.4.0
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Adds Open Measurement support to Android SDK.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.3.6
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
