--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -40,6 +40,18 @@
             <div class="box_full yellow yellowbackgroundlight bold">
                 <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_left_versionString">
+                    4.4.0
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>Adds Open Measurement support to iOS SDK.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
                     4.3.1
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
@@ -47,6 +59,18 @@
                         <li>Pass <b>device[lmt]</b> as 0/1 instead of TRUE/FALSE.</li>
                         <li>Pass <b>device[dnt]</b> as 0/1 instead of TRUE/FALSE.</li>
                         <li>Properly populate <b>campaign_id</b> as <b>level4</b> slicer in MOAT dictionary.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
+                    4.3.0
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>Protect against erroneous behavior if calling start repeatedly.</li>
                     </ul>
                 </div>
             </div>
