--- a/website/index.html
+++ b/website/index.html
@@ -253,14 +253,14 @@
                 <div class="box_left_titlebar indigobackground">
                     <a href="spotx-mobile-notifications/index.html">spotx-mobile-notifications</a>
                 </div>
-                <div class="box_left_versionString indigobackgroundlight">alpha</div>
+                <div class="box_left_versionString indigobackgroundlight">beta</div>
             </div>
             <div class="box_right indigo indigobackgroundlight bold">
                 <div class="box_right_titlebar indigobackground">
                     <a href="spotx-mobile-notifications/index.html">spotx-mobile-notifications</a>
                 </div>
                 <div class="box_right_versionString indigobackgroundlight">
-                    beta
+                    1.0.0
                 </div>
             </div>
         </div>
