--- a/website/spotx-mobile-notifications/index.html
+++ b/website/spotx-mobile-notifications/index.html
@@ -40,11 +40,12 @@
             <div class="box_full indigo indigobackgroundlight bold">
                 <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
-                    beta
+                    1.0.0
                 </div>
                 <div class="box_left_versionString package_description indigoborderlight">
                     <ul>
-                        <li>UNRELEASED</li>
+                        <li>Released - Thursday, 20 June 2019</li>
+                        <li>Initial release of spotx-notifications server</li>
                     </ul>
                 </div>
             </div>
@@ -52,11 +53,11 @@
             <div class="box_full indigo indigobackgroundlight">
                 <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
-                    alpha
+                    beta
                 </div>
                 <div class="box_left_versionString package_description indigoborderlight">
                     <ul>
-                        <li>UNRELEASED</li>
+                        <li>Published to dev openshift cluster.</li>
                     </ul>
                 </div>
             </div>
