--- a/website/spotx-mobile-notifications/index.html
+++ b/website/spotx-mobile-notifications/index.html
@@ -40,12 +40,12 @@
             <div class="box_full indigo indigobackgroundlight bold">
                 <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
-                    1.0.0
+                    1.0.1
                 </div>
                 <div class="box_left_versionString package_description indigoborderlight">
                     <ul>
-                        <li>Released - Thursday, 20 June 2019</li>
-                        <li>Initial release of spotx-notifications server</li>
+                        <li>Released - Thursday, 18 July 2019</li>
+                        <li>Updated to allow deletion of a setting row by its id.</li>
                     </ul>
                 </div>
             </div>
@@ -53,11 +53,12 @@
             <div class="box_full indigo indigobackgroundlight">
                 <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
-                    beta
+                    1.0.0
                 </div>
                 <div class="box_left_versionString package_description indigoborderlight">
                     <ul>
-                        <li>Published to dev openshift cluster.</li>
+                        <li>Released - Thursday, 20 June 2019</li>
+                        <li>Initial release of spotx-notifications server</li>
                     </ul>
                 </div>
             </div>
