--- a/website/spotx-mobile-notifications/index.html
+++ b/website/spotx-mobile-notifications/index.html
@@ -40,6 +40,19 @@
             <div class="box_full indigo indigobackgroundlight bold">
                 <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
+                    1.0.2
+                </div>
+                <div class="box_left_versionString package_description indigoborderlight">
+                    <ul>
+                        <li>Released - Someday, XX August 2019</li>
+                        <li>Allows updating a settings row with 1...n deal ids.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full indigo indigobackgroundlight">
+                <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
+                <div class="box_left_versionString">
                     1.0.1
                 </div>
                 <div class="box_left_versionString package_description indigoborderlight">
