spotx-sdk-android 3.5.0 and spotx-sdk-android 4.4.1

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,6 +40,32 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.4.1
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Improved back button handling for AndroidTVs.</li>
+                        <li>Use play-services-base version 16.0.1 to fix build errors when app id not present.</li>
+                        <li>Use play-services-ads version 16.0.0 to fix build errors when app id not present.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
+                    3.5.0
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Fix issue where ad loading could sometimes block the main thread.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.4.0
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
