spotx-nosdk-controller 1.2.1 - fix release notes

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -89,6 +89,7 @@
                         <li>Add <b>keyEvent</b> handler for Android remote controls (easy to populate with additional keyEvents if necessary in the future).</li>
                         <li><i>INTERNAL:</i> Soft roll-out of VMAP controller code.</li>
                         <li><i>INTERNAL:</i> Soft roll-out of OM SDK controller code.</li>
+                        <li>Support Vendor Whitelisting for OMID.</li>
                     </ul>
                 </div>
             </div>
