spotx-nosdk-controller 1.4.0

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,29 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.4.0
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Full MOAT dictionary from Spotmarket for VPAID and MP4s.</li>
+                        <li>Fix macro formatter with podding on Android.</li>
+                        <li>Support SRT captions.</li>
+                        <li>VAST 4.2 support.</li>
+                        <li>Support third-party VAST URLs.</li>
+                        <li>Replace polyfill of endsWith so we dont get compile errors 5% of the time.</li>
+                        <li>Fixed clickthrough not being saved on icons.</li>
+                        <li>Make wrapper handling more spec-compliant and intances where ads were failing to load due to missing - optional values.</li>
+                        <li>Support VAST 4 Icons.</li>
+                        <li>Add tests for omidpv, omidpn.</li>
+                        <li>Update partner version and don't pass OM parameters without SDK support.</li>
+                        <li>Fix VPAID load failure, fix bad usage of this.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.3.2
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
