spotx-nosdk-android 4.5.0 spotx-nosdk-apple 4.5.0

--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -40,6 +40,23 @@
             <div class="box_full yellow yellowbackgroundlight bold">
                 <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_left_versionString">
+                    4.5.0
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>Support third-party VAST URLs.</li>
+                        <li>Prevent multiple clickthru windows.</li>
+                        <li>Populate MOAT dictionary from Spotmarket for MP4 and VPAID</li>
+                        <li>iOS 13 compatibility.</li>
+                        <li>Fix: wrong iteration order when removing active players.</li>
+                        <li>Fixed flipped podding params in demoapp.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
                     4.4.0
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
