--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,6 +40,20 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.5.0
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Support third-party VAST URLs.</li>
+                        <li>Prevent multiple clickthru windows.</li>
+                        <li>Populate MOAT dictionary from Spotmarket for MP4 and VPAID.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.4.1
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
