spotx-web-nosdk 2.2.0

--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -40,6 +40,26 @@
             <div class="box_full red redbackgroundlight bold">
                 <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
                 <div class="box_left_versionString">
+                    2.2.0
+                </div>
+                <div class="box_left_versionString package_description redborderlight">
+                    <ul>
+                        <li>Added key <b>advertiser_banner_localized</b> to settings.</li>
+                        <li>Added key <b>clickthru_button</b> to settings.</li>
+                        <li>Added key <b>clickthru_button_localized</b> to settings.</li>
+                        <li>Added key <b>skip_time_label</b> to settings.</li>
+                        <li>Added key <b>skip_time_label_localized</b> to settings.</li>
+                        <li>Added key <b>pod_label</b> to settings.</li>
+                        <li>Added key <b>pod_label_localized</b> to settings.</li>
+                        <li>Added key <b>show_time_remaining</b> to settings.</li>
+                        <li>Added key <b>show_skip_time_remaining</b> to settings.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full red redbackgroundlight">
+                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_left_versionString">
                     2.1.1
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
