spotx-nosdk-controller 1.5.0

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,28 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.5.0
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Tap to Fullscreen.</li>
+<li>Learn More button (clickthru_button).</li>
+<li>Learn More button localized (clickthru_button_localized).</li>
+<li>Advertiser Banner localized (advertiser_banner_localized).</li>
+<li>Skip Time label (skip_time_label).</li>
+<li>Skip Time label localized (skip_time_label_localized).</li>
+<li>Pod Label (pod_label).</li>
+<li>Pod Label localized (pod_label_localized).</li>
+<li>Show Time Remaining (show_time_remiaining).</li>
+<li>Show Skip Time Remaining (show_skip_time_remaining).</li>
+<li>SChain support.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.4.0
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
