--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,6 +40,18 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.6.0
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Binary updates to support learn more button, tap-to-fullscreen, and all other features released with spotx-nosdk-controller version 1.5.0.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.5.0
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
