--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -40,6 +40,20 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    3.1.0
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>Faster speeds for increased app usability</li>
+                        <li>Set alerts to be notified when campaigns start and stop spending</li>
+                        <li>Receive push notifications for your campaign alerts</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     3.0.1
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
